--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,23 @@
 * {
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
-html {
-    background: url("https://pixabay.com/de/photos/edinburgh-calton-hill-landschaft-1541103/") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+/*****************Navbar*********************/
+
+.navbar {
+    text-transform: uppercase;
 }
+
+/********************************************/
+
+/*************Hero Image *******************/
+
+#hero-image {
+  max-width: 100%;
+  display: block;
+  height: auto;
+}
+
+
